--- a/demos/index.html
+++ b/demos/index.html
@@ -5,7 +5,7 @@
 	<title>Zizoom - Demo</title>
 
 	<script src="../lib/jquery-2.1.3.js"></script>
-	<script src="../dist/zizoom.js"></script>
+	<script src="../dist/jquery.zizoom.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
